fix llm memory and context

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             </div>
             <div id="dragbar"></div>
             <div class="agent-container">
+                <h3 style="text-align: center;">Agent Results</h3>
                 <div class="agent-header">
-                    <h3>Agent Results</h3>
                     <div class="agent-controls">
                         <select id="agentSelector">
                             <option value="crypto">Crypto Summary</option>
