add history tracking & update name to Browzer

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Agentic Browser</title>
+    <title>Browzer</title>
     <link rel="stylesheet" href="styles.css">
     <script>
         console.log("HTML loaded - Inline script running");
@@ -24,6 +24,7 @@
             <button id="reloadBtn" class="nav-btn">↻</button>
             <input type="text" id="urlBar" class="url-bar" placeholder="Enter URL or search query">
             <button id="goBtn" class="nav-btn">Go</button>
+            <button id="historyBtn" class="nav-btn" title="History (Ctrl+H)">📚</button>
             <button id="extensionsBtn" class="nav-btn">Extensions</button>
         </div>
         <div class="content-container">
