update experience - add @ context

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -50,6 +50,8 @@
                                 <span class="btn-icon">🔍</span>Analyze Page
                             </button>
                         </div>
+                        <!--
+                        DISABLED: Auto-summarize toggle commented out
                         <div class="auto-summarize-container">
                             <label class="switch">
                                 <input type="checkbox" id="autoSummarizeToggle" checked>
@@ -57,6 +59,7 @@
                             </label>
                             <span class="auto-summarize-label">Auto-summarize pages</span>
                         </div>
+                        -->
                     </div>
                 </div>
                 <div id="agentResults" class="agent-results">
