--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -105,6 +105,11 @@
                         </svg>
                         <h3>Browzer Assistant</h3>
                     </div>
+                    <button id="sidebarCloseBtn" class="sidebar-close-btn" title="Hide Assistant Panel">
+                        <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor">
+                            <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z"/>
+                        </svg>
+                    </button>
                 </div>
 
                 <!-- Controls -->
