AI Sidebar Toggle Feature

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -92,7 +92,7 @@
             </div>
 
             <!-- Resizer -->
-            <div id="dragbar"></div>
+            <!-- <div id="dragbar"></div> -->
 
             <!-- AI Assistant Panel -->
             <div class="agent-container">
